syntax = "proto3";
import "google/protobuf/any.proto";

package game_output;

message GameDirectOutput {
    uint64 receiver_id = 1;
    google.protobuf.Any game_output = 2;
}

message GameOutput {
    repeated GameDirectOutput messages = 1;
    optional google.protobuf.Any broadcast = 2;
}